# srd-parser

./: README.md  main.py  pyproject.toml  requirements.txt
examples/: spell_descriptions.md
output/: spells.json
output/data/spells/level_0/: acid_splash.yaml  chill_touch.yaml  dancing_lights.yaml  druidcraft.yaml  eldritch_blast.yaml  elementalism.yaml  fire_bolt.yaml  guidance.yaml  light.yaml  mage_hand.yaml  mending.yaml  message.yaml  minor_illusion.yaml  poison_spray.yaml  prestidigitation.yaml  produce_flame.yaml  ray_of_frost.yaml  resistance.yaml  sacred_flame.yaml  shillelagh.yaml  shocking_grasp.yaml  sorcerous_burst.yaml  spare_the_dying.yaml  starry_wisp.yaml  thaumaturgy.yaml  true_strike.yaml  vicious_mockery.yaml
scripts/: spell_classifier.py
src/dnd_srd_md2json.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/parser/: block_segmenter.py  old_spell_parser.py  spell_parser.py  utils.py
src/parser/models/: effect_match.py  spells.py
src/parser/subparser/: base_parser.py  effect_builder.py  effect_parser.py  requirements_parser.py  resolution_parser.py  save_parser.py  scaling_parser.py  section_parser.py  spell_info_parser.py  targeting_parser.py
tests/: assert_helpers.py  test_spell_parser.py  test_utils.py
tests/data/: acid_arrow.md  acid_arrow_expected.json  acid_splash.md  acid_splash_expected.json  alarm.md  alarm_expected.json  fireball.md  flame_blade.md  flame_strike.md  hold_person.md  magic_missile.md  moonbeam.md  scorching_ray.md  searing_smite.md  shining_smite.md  spell_features.csv  vitriolic_sphere.md
(+312 files in other folders)
